@@ -5,6 +5,7 @@
 * 2014-06-02 - thorben.betten@open-xchange.com
 
  - Fix for bug 32555: Keep other Content-Type parameters when fixing Apple Mailer messages
+ - Fix for bug 32877: Proper field look-up for "attachment_name" field name
 
 * 2014-05-28 - marc.arens@open-xchange.com
 
